--- a/app/globals.css
+++ b/app/globals.css
@@ -127,3 +127,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+main {
+  box-sizing: border-box;
+  padding: 1rem 10%;
+  width: 100%;
+  height: 100%;
+}
