--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -13,12 +13,23 @@
 }
 
 .logoContainer {
-  width: 25%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  user-select: none;
 }
 
-.logoContainer > * {
-  width: 100%;
+.logo {
+  width: 4rem;
   height: auto;
+  pointer-events: none;
+}
+
+.struktor {
+  text-align: left;
+  margin: 0.5rem;
+  font-family: Calibri, sans-serif;
+  font-size: 2rem;
 }
 
 .navList {
