--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -49,7 +49,7 @@
   color: white;
 
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
 
   padding: 1rem 10% 1rem 10%;
   width: 100%;
@@ -58,4 +58,7 @@
 .contactList {
   display: flex;
   flex-direction: column;
+}
+
+.contactDetail {
 }
