--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -56,7 +56,7 @@
   display: flex;
   justify-content: space-around;
 
-  padding: 1rem 10% 1rem 10%;
+  padding: 2rem 10% 3rem 10%;
   width: 100%;
 }
 
@@ -66,6 +66,17 @@
 }
 
 .contactDetail {
+  text-decoration: none;
+}
+
+.contactDetail:link,
+.contactDetail:visited {
+  color: #fff;
+}
+
+.contactDetail:hover,
+.contactDetail:active {
+  color: #ff0000;
 }
 
 @media only screen and (max-width: 600px) {
