--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -3,8 +3,8 @@
   justify-content: space-between;
   display: flex;
   flex-direction: row;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
+  border-bottom: 0.1rem solid black;
+  margin-bottom: 1rem;
 
   align-items: baseline;
 
@@ -28,9 +28,12 @@
 
 .struktor {
   text-align: left;
-  margin: 0.5rem;
+  margin-left: 0.2rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   font-family: Calibri, sans-serif;
   font-size: 2rem;
+  text-transform: uppercase;
 }
 
 .navList {
@@ -45,13 +48,12 @@
   padding-left: 0.6rem;
 }
 
-.navLink {
-}
-
 .contact {
+  border-top: #ff0000 solid 0.2rem;
   box-sizing: border-box;
   background-color: black;
   color: white;
+  margin-top: 1rem;
 
   display: flex;
   justify-content: space-around;
@@ -63,10 +65,6 @@
 .contactList {
   display: flex;
   flex-direction: column;
-}
-
-.contactDetail {
-  text-decoration: none;
 }
 
 .contactDetail:link,
