--- a/app/page.module.css
+++ b/app/page.module.css
@@ -22,6 +22,10 @@
   background: linear-gradient(to top, rgba(0, 0, 0, 0.85), transparent);
 }
 
+.cardContainer {
+  margin: 1rem 0;
+}
+
 @media only screen and (max-width: 600px) {
   .headerText {
     font-size: 3rem;
