--- a/components/card.module.css
+++ b/components/card.module.css
@@ -19,8 +19,9 @@
 } */
 
 .thumbnail {
-  max-width: 45%;
-  height: auto;
+  position: relative !important;
+  max-width: 45% !important;
+  height: auto !important;
 }
 
 .textContainer {
