--- a/app/page.module.css
+++ b/app/page.module.css
@@ -26,6 +26,12 @@
   margin: 1rem 0;
 }
 
+@media only screen and (max-width: 992px) {
+  .headerText {
+    font-size: 4rem;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .headerText {
     font-size: 3rem;
