--- a/components/card.module.css
+++ b/components/card.module.css
@@ -28,6 +28,7 @@
   display: flex;
   flex-direction: column;
   margin: 1rem 0 1rem 1rem;
+  padding-bottom: 5rem;
   justify-content: center;
 }
 
@@ -40,34 +41,17 @@
 .text {
 }
 
-.button {
-  display: inline-block;
-  margin-top: 1rem;
-  border-radius: 0.5rem;
-  font-size: 1rem;
-  padding: 0.8rem 1.6rem;
-}
-
-.button:link,
-.button:visited {
-  color: #fff;
-  background-color: #ff0000;
-}
-
-.button:hover,
-.button:active {
-  color: #ff0000;
-  background-color: #fff;
-  box-shadow: 0 0 0.5rem 0.2rem #990000;
-}
-
 @media only screen and (max-width: 600px) {
   .card {
     flex-direction: column !important;
   }
 
   .thumbnail {
-    max-width: 100%;
+    max-width: 100% !important;
+  }
+
+  .textContainer {
+    padding-bottom: 0;
   }
 }
 
