--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -65,6 +65,10 @@
   display: flex;
   flex-direction: column;
 }
+.contactDetail {
+  margin-bottom: 0.5rem;
+  display: block;
+}
 
 .contactDetail:link,
 .contactDetail:visited {
