--- a/components/galleryItem.module.css
+++ b/components/galleryItem.module.css
@@ -1,9 +1,8 @@
 .itemContainer {
   box-sizing: content-box;
-
+  position: relative;
   width: 100%;
   margin: 0 auto;
-  padding: 2rem 0;
 }
 
 .item {
