--- a/app/projekti/page.module.css
+++ b/app/projekti/page.module.css
@@ -1,8 +1,10 @@
 .galleryPage {
+  padding: 2rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr;
   gap: 1rem;
+  align-items: center;
 }
 
 @media only screen and (max-width: 992px) {
