--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -32,7 +32,7 @@
   margin-bottom: 0.5rem;
   font-family: Calibri, sans-serif;
   font-size: 2rem;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 .navList {
