--- a/app/usluge/page.module.css
+++ b/app/usluge/page.module.css
@@ -57,7 +57,8 @@
 
 .sidePhoto {
   position: relative !important;
-  height: 100% !important;
+  width: 100% !important;
+  height: auto;
   margin: 1rem;
   border: #ff0000 solid 0.1rem;
   border-radius: 1rem;
