--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+
 .headerContiner {
   position: relative;
   overflow: hidden;
@@ -6,6 +8,7 @@
 .headerImg {
   width: 100%;
   height: auto;
+  border-bottom: solid #ff0000 0.1rem;
 }
 
 .headerText {
@@ -13,9 +16,10 @@
   position: absolute;
   bottom: 0;
   color: white;
-  font-family: Calibri, sans-serif;
+  /* font-family: Calibri, sans-serif; */
+  font-family: "Righteous", cursive;
   text-transform: uppercase;
-  font-size: 5rem;
+  font-size: 4rem;
   width: 100%;
   padding: 2rem 2rem 0.5rem 1rem;
   user-select: none;
@@ -45,6 +49,10 @@
   display: flex;
   flex-direction: row;
   gap: 1rem;
+}
+
+.locationText {
+  font-weight: 700;
 }
 
 @media only screen and (max-width: 992px) {
