--- a/app/kontakt/page.module.css
+++ b/app/kontakt/page.module.css
@@ -1,5 +1,10 @@
 .contactPlace {
   font-size: 1.6rem;
+  margin: 0.5rem 0;
+}
+
+.subHeader {
+  margin: 0.5rem 0;
 }
 
 .locationContainer {
@@ -17,7 +22,7 @@
 }
 
 .offset {
-  margin-left: 1rem;
+  /* margin-bottom: 1rem; */
 }
 
 @media only screen and (max-width: 600px) {
