--- a/app/usluge/page.module.css
+++ b/app/usluge/page.module.css
@@ -1,21 +1,37 @@
 .contentContainer {
-  margin: 1rem;
+  /* margin: 1rem; */
 }
 
 .serviceContainer {
-  padding: 1rem 1rem 2.8rem 1rem;
+  padding: 1rem 1rem 1rem 1rem;
   border-bottom: #ff0000 solid 0.1rem;
   line-height: 1.2;
   display: flex;
 }
 
-.serviceContainer:last-child {
+.serviceContainer2 {
+  padding: 1rem;
+  border-bottom: #ff0000 solid 0.1rem;
+  line-height: 1.2;
+  display: flex;
+  flex-direction: column;
   line-height: 1.4;
   border-bottom: none;
 }
 
+.imageContainer {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: 1fr 1fr;
+}
+
 .textContainer {
   width: 100%;
+}
+
+.textContainer2 {
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .serviceTitle {
@@ -25,10 +41,11 @@
 
 .serviceItem {
   margin: 0.5rem;
+  font-weight: 700;
 }
 
 .concreteDetails {
-  padding: 0.5rem 2rem 1rem 0.5rem;
+  padding: 0.5rem 0 1rem 0;
 }
 
 .serviceList {
@@ -47,6 +64,7 @@
 .serviceSubItem {
   list-style-type: disc;
   list-style-position: outside;
+  font-weight: 500;
   margin-left: 1rem;
 }
 
@@ -59,7 +77,7 @@
   position: relative !important;
   width: 100% !important;
   height: auto;
-  margin: 1rem;
+  /* margin: 1rem; */
   border: #ff0000 solid 0.1rem;
   border-radius: 1rem;
 }
@@ -76,5 +94,9 @@
 
   .textContainer {
     width: 100%;
+  }
+
+  .imageContainer {
+    grid-template-columns: 1fr;
   }
 }
